--- a/index.html
+++ b/index.html
@@ -737,10 +737,10 @@
           class="bg-black rounded-md main-bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-8 pb-10"
         >
           <p id="contact"></p>
-          <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3">
+          <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3" style="color: white;">
             CONTACT US
           </h2>
-          <p class="text-base text-center text_3">
+          <p class="text-base text-center text_3" style="color: white;">
             Any issues! Fill the form below and our team will contact you
             shortly.
           </p>
@@ -748,7 +748,7 @@
           <div class="mb-4">
             <label
               class="block text_3 text-sm font-bold mb-2"
-              for="contact_nom"
+              for="contact_nom" style="color: white;"
             >
               Name
             </label>
@@ -763,7 +763,7 @@
           <div class="mb-6">
             <label
               class="block text_3 text-sm font-bold mb-2"
-              for="contact_email"
+              for="contact_email" style="color: white;"
             >
               Email
             </label>
@@ -779,7 +779,7 @@
           <div class="mb-6">
             <label
               for="contact_message"
-              class="block text_3 text-sm font-bold mb-2"
+              class="block text_3 text-sm font-bold mb-2" style="color: white;"
               >Message</label
             >
             <textarea
