--- a/index.html
+++ b/index.html
@@ -195,6 +195,26 @@
                 src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
               ></script>
             </div>
+            <li>
+              <a href="login.html">
+                <button
+                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform"
+                >
+                  Login
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    class="w-4 h-4 ml-1 transform translate-x-0 transition-transform"
+                    viewBox="0 0 24 24"
+                  >
+                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                  </svg>
+                </button>
+              </a>
+            </li>
           </ul>
         </div>
       </nav>
