Support-us issue resolved

--- a/volunteer.html
+++ b/volunteer.html
@@ -80,7 +80,7 @@
                     <li>
                         <div x-data="{ open: false }" @mouseleave="open = false" class="relative">
                             <a @mouseover="open = true"
-                                class="p-3 text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">
+                                class="p-3 text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item cursor-pointer">
                                 Support Us
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" fill="none"
                                     viewBox="0 0 24 24" stroke="currentColor" class="mt-1">
