fix type stary for stray in files and file names

--- a/adopt.html
+++ b/adopt.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./reportstary.css" />
+    <link rel="stylesheet" href="./reportstray.css" />
     <link rel="stylesheet" href="./navbar.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
     <!-- <link rel="stylesheet" href="./introSection.css"> -->
@@ -157,7 +157,7 @@
             </li>
             <li>
               <a
-                href="./reportstary.html"
+                href="./reportstray.html"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >SOS Report</a
               >
