--- a/blog.html
+++ b/blog.html
@@ -167,7 +167,7 @@
             </li>
             <li>
               <a
-                href="./reportstary.html"
+                href="./reportstray.html"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >SOS Report</a
               >
