--- a/index light.html
+++ b/index light.html
@@ -44,7 +44,7 @@
           <li><a href="./index.html" class="p-3 text-gray-800 font-bold hover:underline underline-offset-4">Home</a></li>
           <li><a href="./donate.html" class="p-3 text-gray-800 font-bold hover:underline underline-offset-4">Donate
               Animals</a></li>
-          <li><a href="./reportstary.html" class="p-3 text-gray-800 font-bold hover:underline underline-offset-4">SOS
+          <li><a href="./reportstray.html" class="p-3 text-gray-800 font-bold hover:underline underline-offset-4">SOS
               Report</a></li>
           <li><a href="#contact">
               <button
