--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </li>
             <li>
               <a
-                href="./reportstary.html"
+                href="./reportstray.html"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >SOS Report</a
               >
@@ -224,7 +224,7 @@
 
       <!-- SOS button
 			<div>
-				<form action="./reportstary.html" method="get" target="_blank">
+				<form action="./reportstray.html" method="get" target="_blank">
 					<button id="mySBtn" title="SOS">SOS</button>
 				</form>
 			</div>
@@ -254,7 +254,7 @@
             ><b>Donate</b></a
           >
           and through our SOS feature
-          <a class="hover-underline-animation" href="./reportstary.html"
+          <a class="hover-underline-animation" href="./reportstray.html"
             ><b>Report</b></a
           >
           stray animals in need of immediate assistance. Together, we can create
