--- a/reportstray.html
+++ b/reportstray.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./introSection.css">
   <link rel="stylesheet" href="./navbar.css">
   <link rel="stylesheet" href="./mobileView.css">
-  <link rel="stylesheet" href="./reportstary.css">
+  <link rel="stylesheet" href="./reportstray.css">
   <!-- <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico"> -->
   <link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg">
   <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
@@ -126,7 +126,7 @@
           </li>
           <li>
             <a
-              href="./reportstary.html"
+              href="./reportstray.html"
               class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
               >SOS Report</a
             >
@@ -439,7 +439,7 @@ hideBackToTopButton()
 
   <script src="./navbar.js"></script>
   <script src="./light-dark-theme.js"></script>
-  <script src="reportstary.js"></script>
+  <script src="reportstray.js"></script>
 </body>
 
 </html>
