--- a/volunteer.html
+++ b/volunteer.html
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                     </li>
-                    <li><a href="reportstary.html"
+                    <li><a href="reportstray.html"
                             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS
                             Report</a>
                     </li>
