--- a/news.html
+++ b/news.html
@@ -107,7 +107,7 @@
 					  </div>
 					</li>
 					<li>
-					  <a href="./reportstary.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS Report</a>
+					  <a href="./reportstray.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS Report</a>
 					</li>
 					<li>
 					  <a href="./index.html#contact">
