change the navbar style includeing logo and hoffer effect of navbar more intractive also add icon for intractive ui, add a cta button on header section change the main header and paraghraph content

--- a/donate.html
+++ b/donate.html
@@ -10,11 +10,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/Assets/Images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/Assets/Images/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="./output.css">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./introSection.css">
-    <link rel="stylesheet" href="./navbar.css">
-    <link rel="stylesheet" href="./mobileView.css">
+    <link rel="stylesheet" href="/Assets/css/output.css">
+    <link rel="stylesheet" href="/Assets/css/style.css">
+    <link rel="stylesheet" href="/Assets/css/introSection.css">
+    <link rel="stylesheet" href="/Assets/css/navbar.css">
+    <link rel="stylesheet" href="/Assets/css/mobileView.css">
     <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico">
     <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -96,23 +96,22 @@
   </head>
 
 <body>
-  <header id="header"
-    class=" text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center lg:justify-around">
+  <header class="header text-gray-400 bg-header-offwhite body-font flex flex-row items-center  lg:justify-around"
+  id="header">
+
     <div class="flex flex-row items-center md:flex-row md:items-center p-2" id="logo">
-      <span class="mission-1 mission-dark"> Saving Lives </span>
       <a class="logo-border" href="index.html">
         <img class="rounded-full logo-size" src="./Assets/Images/logo.jpg" alt="logo" />
       </a>
-      <span class="mission-2 mission-dark"> Saving Animals </span>
-      <!--
-      <div class="w-full mt-8 md:mt-0">
-        <h1 class="text-4xl text_2  text-center md:text-left md:ml-12 uppercase font-serif font-bold " id = "heading-adopt-me">Adopt
-          today!</h1>
-        <p class="text-lg text-gray-400 text-center md:text-left md:ml-12 mt-2">Give life to a needed animal</p>
-      </div> -->
+      <div class="flex flex-col ms-1  items-start">
+        <span class="w-full mission-1 mission-dark">Saving Lives </span>
+        <span class="w-full mission-2 mission-dark">Saving Animals </span>
+      </div>
     </div>
+
+
     <button data-collapse-toggle="navbar-default" type="button"
-      class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 lg:hidden focus:outline-none  text_4 "
+      class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 lg:hidden focus:outline-none text_4"
       aria-controls="navbar-default" aria-expanded="false" id="nav-button">
       <span class="sr-only">Open main menu</span>
       <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
@@ -122,35 +121,65 @@
           clip-rule="evenodd"></path>
       </svg>
     </button>
-    <nav class="">
-      <div class="hidden w-full lg:block z-2" id="navbar">
-        <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-[18px] space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
-        <li>
-          <a href="./index.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
+
+
+  <nav class="">
+    <div class="hidden w-full lg:block z-2" id="navbar">
+      <ul
+        class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
+        <li class="navitem">
+          <a href="#meet"
+            class="lg:p-3 text-custom-heading  turn-red-hover navbar-item">Meet
+            Pets</a>
         </li>
-          <a href="./news.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet News</a>
+        <li class="navitem">
+          <a href="#About"
+            class="text-custom-heading turn-red-hover navbar-item">About
+            Us</a>
         </li>
-        <li>
-          <a href="./blog.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
+        <li class="navitem">
+          <a href="./news.html"
+            class="text-custom-heading turn-red-hover navbar-item">Pet
+            News</a>
         </li>
-        <li>
-          <a href="./donate.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate</a>
+        <li class="navitem">
+          <a href="./blog.html"
+            class="text-custom-heading turn-red-hover navbar-item">Blogs</a>
         </li>
-        <li>
+        <li class="navitem">
+          <a href="./donate.html"
+            class="text-custom-heading turn-red-hover navbar-item">Donate</a>
+        </li>
+        <li class="navitem">
           <div x-data="{ open: false }" @mouseleave="open = false" class="relative">
-          <a @mouseover="open = true" class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full">
-            Support Us
-            <svg xmlns="http://www.w3.org/2000/svg" width="14px" height="14px" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="mt-1">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
-            </svg>
-          </a>
-          <div x-show="open" class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl">
-            <a href="volunteer.html" class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">Become a Volunteer</a>
-          </div>
+            <a @mouseover="open = true"
+              class="text-custom-heading flex hover:underline underline-offset-4 turn-red-hover navbar-item w-full">
+              Support Us
+              <svg xmlns="http://www.w3.org/2000/svg" width="14px" height="14px" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor" class="mt-1">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+              </svg>
+            </a>
+            <div x-show="open" class="z-20 absolute -left-1 w-max px-3  rounded-md shadow-xl dropdownArea">
+              <a href="volunteer.html"
+                class="block py-2 text-base text-white-300 text-white-700 hover:bg-white-400 hover:text-white">Become
+                a Volunteer</a>
+            </div>
           </div>
         </li>
+        <li class="navitem">
+          <a href="./reportstary.html"
+            class="text-custom-heading turn-red-hover navbar-item">SOS
+            Report</a>
+        </li>
         <li>
-          <a href="./reportstary.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS Report</a>
+          <a href="#contact">
+            <button
+              class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform">
+              <i class="bi bi-telephone-fill me-1"></i>
+              Contact Us
+            </button>
+          </a>
         </li>
         <li>
           <a id="theme-toggle">
@@ -159,12 +188,13 @@
         </li>
         <!-- google translate -->
         <div id="google_translate_element">
-          <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+          <script type="text/javascript"
+            src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
         </div>
-        </ul>
-      </div>
-      </nav>
-  </header>
+      </ul>
+    </div>
+  </nav>
+</header>
 
   <section class="text-gray-600 body-font relative bg-[url('Assets/Images/pet-don.jpg')] bg-center bg-no-repeat
         bg-cover donate-section">
@@ -466,8 +496,8 @@
       </div>
     </footer>
 
-  <script src="navbar.js"></script>
-  <script src="light-dark-theme.js"></script>
+  <script src="/Assets/js/navbar.js"></script>
+  <script src="/Assets/js/light-dark-theme.js"></script>
 </body>
 
 </html>
