--- a/blog.html
+++ b/blog.html
@@ -9,11 +9,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/Assets/Images/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/Assets/Images/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="stylesheet" href="./output.css" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./introSection.css" />
-    <link rel="stylesheet" href="./navbar.css" />
-    <link rel="stylesheet" href="./mobileView.css" />
+    <link rel="stylesheet" href="/Assets/css/output.css" />
+    <link rel="stylesheet" href="/Assets/css/style.css" />
+    <link rel="stylesheet" href="/Assets/css/introSection.css" />
+    <link rel="stylesheet" href="/Assets/css/navbar.css" />
+    <link rel="stylesheet" href="/Assets/css/mobileView.css" />
     <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico" />
     <link
       rel="stylesheet"
@@ -423,9 +423,9 @@
       }
     </script>
 
-    <script src="index.js"></script>
-    <script src="light-dark-theme.js"></script>
-    <script src="blog.js"></script>
-    <script src="navbar.js"></script>
+    <script src="/Assets/js/index.js"></script>
+    <script src="/Assets/js/light-dark-theme.js"></script>
+    <script src="/Assets/js/blog.js"></script>
+    <script src="/Assets/js/navbar.js"></script>
   </body>
 </html>
