Modified Contact Form

--- a/index.html
+++ b/index.html
@@ -757,6 +757,7 @@
               id="contact_nom"
               name="contact_nom"
               type="text"
+              pattern="[A-Za-z]+"
               placeholder="Name"
             />
           </div>
