--- a/index light.html
+++ b/index light.html
@@ -342,9 +342,9 @@
 
   <!--     Contact us section html starts from here -->
   <section id="contact" class="bg flex flex-wrap pt-16 pb-8 flex justify-center items-center w-full">
-    <div class="op rounded-lg shadow-lg bg-slate-50 max-w-xs">
+    <div class="op rounded-lg shadow-lg bg-slate-50 max-w-xs" align="center">
       <div class="p-4 flex flex-col gap-2">
-        <h5 class="text-gray-800 md:text-[40px] font-bold mb-2 text-center">CONTACT US</h5>
+        <h5 class="text-gray-800 md:text-[40px] font-bold mb-2 text-center">Contact Us</h5>
         <p style="font-weight: bold; color: black; text-align: center;">
           Any issues! Fill out the form below, and our team will contact you shortly.
         </p>
@@ -352,18 +352,17 @@
         <label for="checkcontact" class="contactbutton">
           <div class="mail"></div>
         </label>
-        <input id="checkcontact" type="checkbox">
-  
-        <form action="https://formspree.io/f/xayaokzl" method="post" class="contactform">
+    
+        <form action="https://formspree.io/f/xayaokzl" method="post" class="contactform" align="center">
           <p class="input_wrapper" style="margin-bottom: 16px;">
-            <input type="text" name="contact_nom" value="" id="contact_nom" placeholder="NAME">
+            <input type="text" name="contact_nom" value="" id="contact_nom" placeholder="Name" style="border-radius: 20px">
           </p>
           <p class="input_wrapper" style="margin-bottom: 16px;">
-            <input type="text" name="contact_email" value="" id="contact_email" placeholder="EMAIL">
+            <input type="text" name="contact_email" value="" id="contact_email" placeholder="E-mail" style="border-radius: 20px">
           </p>
         
           <p class="textarea_wrapper" style="margin-bottom: 16px;">
-            <textarea name="contact_message" id="contact_message" placeholder="MESSAGE"></textarea>
+            <textarea name="contact_message" id="contact_message" placeholder="Message" style="border-radius: 20px"></textarea>
           </p>
           <button type="button"
             class="border-2 bg-gray-800 rounded-lg py-3 px-16 mt-3 text-white hover:text-gray-300 ">Submit</button>
